--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "predeploy": "npm run build && cp dist/index.html dist/404.html",
-    "lint": "eslint .",
+    "predeploy": "npm run build && powershell Copy-Item dist/index.html dist/404.html",
+    "deploy": "gh-pages -d dist",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.0",
